# pai-event-stream-example

./: README.md  pyproject.toml
src/pai/: agent.py  proxy.py
