[project]
name = "pai-event-stream-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai>=0.0.35",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pai"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
